# mercadona-mcp

./: .gitignore  README.md  auth_config.example.json  calculate_smart_cart.py  package-lock.json  package.json  pyproject.toml  swagger.yaml  test_client_scenario.py  verify_client.py
.agent/skills/: skills
legacy_python/src/mercadona_mcp/: server.py
src/: index.ts  mercadona-client.ts  mercadona_client.py  server.py  smart-cart.ts  types.ts
src/mercadona_mcp/: mercadona_client.py  server.py
